--- a/Lessons/12_GLMs.Rmd
+++ b/Lessons/12_GLMs.Rmd
@@ -60,7 +60,7 @@ cor.test(PeterPaul.chem.nutrients$irradianceWater, PeterPaul.chem.nutrients$dept
 ```
 Question: How would you report the results of this test (overall findings and report of statistical output)?
 
-> ANSWER: 
+> ANSWER: Irradiance is predicted to be 487 at the water surface and decreases by 96 with each unit increase in depth (linear regression; R^2^ = 0.31, DF = 15,449, p < 0.001). For linear regression, want R-squared, df, and p value.
 
 So, we see there is a significant negative correlation between irradiance and depth (lower light levels at greater depths), and that this model explains about 31 % of the total variance in irradiance. Let's visualize this relationship and the model itself. 
 
@@ -84,7 +84,7 @@ The option best suited for communicating findings is to plot the explanatory and
 # Plot the regression
 irradiancebydepth <- 
   ggplot(PeterPaul.chem.nutrients, aes(x = depth, y = irradianceWater)) +
-  #ylim(0, 2000) +
+  ylim(0, 2000) + # un-comment to ignore outlier
   geom_point() 
 print(irradiancebydepth) 
 ```
@@ -92,20 +92,22 @@ print(irradiancebydepth)
 Given the distribution of irradiance values, we don't have a linear relationship between x and y in this case. Let's try log-transforming the irradiance values.
 
 ```{r, fig.height = 3, fig.width = 4}
+## filtering 0 data points so they can be log transformed, and there are very few of them in a large dataset
 PeterPaul.chem.nutrients <- filter(PeterPaul.chem.nutrients, irradianceWater != 0)
 irradiance.regression2 <- lm(data = PeterPaul.chem.nutrients, log(irradianceWater) ~ depth)
 summary(irradiance.regression2)
+## log(irradiance) = 6.2 - 0.7*depth + error
 plot(irradiance.regression2)
 
 # Add a line and standard error for the linear regression
 irradiancebydepth2 <- 
   ggplot(PeterPaul.chem.nutrients, aes(x = depth, y = irradianceWater)) +
-  geom_smooth(method = "lm") +
   scale_y_log10() +
-  geom_point() 
+  geom_point()  +
+  geom_smooth(method = "lm")
 print(irradiancebydepth2) 
 
-# SE can also be removed
+# SE confidence interval (gray area) can also be removed
 irradiancebydepth2 <- 
     ggplot(PeterPaul.chem.nutrients, aes(x = depth, y = irradianceWater)) +
     geom_point() +
@@ -114,7 +116,15 @@ irradiancebydepth2 <-
 print(irradiancebydepth2)
 
 # Make the graph attractive
-
+irradiancebydepth3 <- 
+    ggplot(PeterPaul.chem.nutrients, aes(x = depth, y = irradianceWater)) +
+    geom_point(color = "blue", alpha = 0.2) +
+    scale_y_log10() +
+    geom_smooth(method = 'lm', se = FALSE, color = "black") +
+  scale_x_continuous(breaks = seq(0, 10, 2)) +
+  labs(x = "Depth (m)", y = "Irradiance (units)")
+  
+print(irradiancebydepth3)
 ```
 
 ### Non-parametric equivalent: Spearman's Rho
@@ -132,6 +142,8 @@ It is possible, and often useful, to consider multiple continuous explanatory va
 TPregression <- lm(data = PeterPaul.chem.nutrients, tp_ug ~ depth + dissolvedOxygen)
 summary(TPregression)
 
+## TP = 6(at zero depth and zero DO so meaningless) + 1.5*depth + 0.9*DO
+
 TPplot <- ggplot(PeterPaul.chem.nutrients, 
                  aes(x = dissolvedOxygen, y = tp_ug, color = depth)) +
   geom_point() +
@@ -147,7 +159,7 @@ library(corrplot)
 PeterPaulnutrients <- 
   PeterPaul.chem.nutrients %>%
   select(tn_ug:po4) %>%
-  na.omit()
+  na.omit() # need to remove all nas for corrplot to work
 PeterPaulCorr <- cor(PeterPaulnutrients)
 corrplot(PeterPaulCorr, method = "ellipse")
 corrplot.mixed(PeterPaulCorr, upper = "ellipse")
@@ -159,10 +171,10 @@ However, it is possible to over-parameterize a linear model. Adding additional e
 Let's say we want to know which explanatory variables will allow us to best predict total phosphorus concentrations. Potential explanatory variables from the dataset could include depth, dissolved oxygen, temperature, PAR, total N concentration, and phosphate concentration.
 
 ```{r}
-PeterPaul.naomit <- na.omit(PeterPaul.chem.nutrients)
+PeterPaul.naomit <- na.omit(PeterPaul.chem.nutrients) ## removed majority of points
 TPAIC <- lm(data = PeterPaul.naomit, tp_ug ~ depth + dissolvedOxygen + 
               temperature_C + tn_ug + po4)
-step(TPAIC)
+step(TPAIC) # decreases the model to the most parsimonious
 TPmodel <- lm(data = PeterPaul.naomit, tp_ug ~ temperature_C + tn_ug)
 summary(TPmodel)
 
