--- a/Lessons/13_TimeSeries.Rmd
+++ b/Lessons/13_TimeSeries.Rmd
@@ -49,11 +49,11 @@ The coefficients of a hierarchical model are divided into two categories: **fixe
 
   + Do you have a particular interest in the studied factor level?
 
-  + Have you included all possible levels in the study?
+  + Have you included all possible levels in the study? If so, fixed effect
   
-  + Do you have interest in the variance among levels?
+  + Do you have interest in the variance among levels? If so, consider random effect.
   
-  + Do you have interest in generalizing to factor levels that you did not study?
+  + Do you have interest in generalizing to factor levels that you did not study? Random effect.
   
 One common variable in hierarchical models is **time.** Time can be a complicated explanatory variable, as it can act as either a fixed or a random effect depending on the study design and research question. Due to **temporal autocorrelation,** conditions measured at a single site will be highly influenced by the conditions preceding the sampling date. Therefore, two samples taken in relatively close temporal proximity may not necessarily be independent of one another. Treating time as a random effect will account for temporal trends in observations (e.g., diel or seasonal patterns) that may not be of interest for your study.
 
@@ -88,10 +88,11 @@ Next, we will determine the degree of temporal autocorrelation in our dataset. W
 # Determine autocorrelation in residuals
 TempTest.auto <- lme(data = PeterPaul.summertemp,
                      temperature_C ~ sampledate * lakename, 
-                     random = ~1|Week)
+                     # would be fixed ANCOVA if we stopped here
+                     random = ~1|Week) # specify random effect, each week has its own intercept
 TempTest.auto
 
-ACF(TempTest.auto)
+ACF(TempTest.auto) # quantify autocorrelation of model
 
 ```
 This model structure should look familiar, with a typical linear model structure and dataframe defined. The addition here is that we have defined Week as a random variable. Essentially, we are interested not in the specific effects of each week but in the variability among weeks, so we have defined it as a random effect (essentially coming from a larger distribution of seasonal variability). The ~1 statement indicates that each week has its own intercept in the model. From here, we want to take the first order correlation to specify our autocorrelation structure. From the ACF output, we take the 2nd value (the innermost group level) to define the degree of autocorrelation. This number will always fall between 0 and 1. Notice that there is a fairly large degree of autocorrelation in our variables.
@@ -108,6 +109,7 @@ TempTest.mixed <- lme(data = PeterPaul.summertemp,
                      #sampledate is duplicated in some cases, so need to split up by lake
                      correlation = corAR1(form = ~ sampledate/lakename|Week, value = 0.423),
                      #define method as restricted maximum likelihood
+                     # penalizes for additional explanatory variables
                      method = "REML")
 summary(TempTest.mixed)
 
@@ -127,10 +129,12 @@ TempTest.posthoc = lsmeans(TempTest.mixed, ~ sampledate * lakename)
 cld(TempTest.posthoc, alpha = 0.05, Letters = letters, adjust = "tukey")
 
 # display our final relationship
-ggplot(PeterPaul.summertemp, aes(x = sampledate, y = temperature_C, color = lakename)) +
-  geom_point() +
+ggplot(PeterPaul.summertemp, aes(x = sampledate, y = temperature_C)) +
+  geom_point(aes(color = lakename)) +
   scale_color_manual(values = c("#7fcdbb", "#253494")) +
-  geom_abline(intercept = 20.47, slope = 0.0001)
+  geom_abline(intercept = 20.47, slope = 0.0001) +
+  # equation for line
+  geom_text(y = 28, x = 2000, label = "y=blah")
 ```
 
 Question: How would you interpret the collective results of your mixed effects model in the context of the study question?
