--- a/Lessons/15_SpatialAnalysis.Rmd
+++ b/Lessons/15_SpatialAnalysis.Rmd
@@ -320,33 +320,40 @@ mapView(counties_sf)
 
 ```{r read HUCs shapefile}
 #Read the shapefile into an sf dataframe named "huc8_sf"
-huc8_sf <-   
+huc8_sf <- st_read('./Data/Spatial/huc_250k_nc.shp')   
 
 #Check the CRS
+st_crs(huc8_sf) # no EPSG code but uses aea, Albers equal something
 
-
-#Exaimine the column names
-
+#Examine the column names
+names(huc8_sf)
 
 #View the data as a map
+mapView(huc8_sf['SUB'])
 
+# alternatively use plot
+plot(huc8_sf['SUB'],
+     graticule = st_crs(huc8_sf),
+     axes = TRUE)
 ```
 
 > _Challenge_: Read in the NC 8-Digit HUC dataset again, but this time _filter_ the data so the result only includes the one with a HUC_NAME value of 'Upper Neuse'.
 
 ```{r Select the Upper Neuse HUC 8}
 #Read the shapefile into an sf dataframe
-upperNeuse_sf <-  
+upperNeuse_sf <- st_read('./Data/Spatial/huc_250k_nc.shp') %>%
+  filter(HUC_NAME == 'Upper Neuse')
   
-
+mapview(upperNeuse_sf)
 ```
 
 
 ## Spatial data aggregation with group_by and summarize
 ```{r Dissolve all counties into a single feature}
 #Aggregate the data using group_by and summarize, just as you would a non-spatial dataframe
+## aggregate so all counties are on feature
 state_sf <- counties_sf %>% 
-  group_by('STATEFP') %>% 
+  group_by(STATEFP) %>% 
   summarize(ALAND = sum(ALAND))
 
 #View the data
@@ -360,7 +367,9 @@ mapview(state_sf2)
 > Now you try it: Aggregate the HUC data on the SUB attribute, computing the sum of the "AREA" field and view the result. 
 
 ```{r Aggregate the HUC data on an attribute, saving as huc2_sf}
-huc2_sf <- 
+huc2_sf <- huc8_sf %>%
+  group_by(SUB) %>%
+  summarize(AREA = sum(AREA))
   
   
 mapview(huc2_sf)
@@ -417,8 +426,8 @@ ggplot() +
 ### leaflet
 Tip: See http://leaflet-extras.github.io/leaflet-providers/ for other basemaps
 ```{r Visualizing multiple datasets with leaflet}
-leaflet() %>% 
-  addProviderTiles(providers$Esri.WorldShadedRelief) %>%  
+leaflet() %>% # create the object
+  addProviderTiles(providers$Esri.NatGeoWorldMap) %>% # basemap, follow link above to find names like Esri.NatGeoWorlMap  
   addPolygons(data = counties_WGS84, color = "orange", weight = 1, smoothFactor = 0.5,   
               opacity = 1.0, fillOpacity = 0.5,
               fillColor = ~colorQuantile("YlGnBu", ALAND)(ALAND)) %>% 
@@ -455,17 +464,19 @@ sync(m1,m2)
 ## Clipping and intersecting data
 ```{r}
 #Clip the HUC2 data set by the NC State boundary dataset
-huc2_UTM_nc <- st_intersection(huc2_utm,state_sf_utm)
+huc2_UTM_nc <- st_intersection(huc2_utm,state_sf_utm) # clip using intersection command
 mapview(huc2_UTM_nc)
 ```
 
 > Exercise: Try subsetting the huc2_UTM dataset for SUB = 0302, then clipping counties with that subset.
 
 ```{r EXERCISE: Clip the counties dataset with the border of HUC 0302}
-huc0302_counties <- 
+huc0302 <- huc2_utm %>%
+  filter(SUB == '0302')
+huc0302_counties <- st_intersection(counties_sf_utm, huc0302)
   
 #Map the product, showing values by land area
-mapview(huc0302_counties['ALAND'])
+mapview(huc0302_counties['ALAND'], legend = FALSE) # legend clutters the map
 ```
 
 
@@ -475,11 +486,14 @@ To add more attributes to our spatial features, we can merge records just as we 
 ```{r Join demographic data to county features}
 #Read in the demographic data
 demog_df <- read.csv('./Data/Spatial/NC_Demography.csv') %>% 
-  mutate(FIPS = as.factor(FIPS))                                 #Convert the FIPS variable to a factor
+  mutate(FIPS = as.factor(FIPS))   #Convert the FIPS variable to a factor
 
 #Join the two datasets using "GEOID" from the left dataset and "FIPS" from the right
 counties_sf_utm_join <- counties_sf_utm %>% 
   left_join(y = demog_df,by = c("GEOID" =  "FIPS"))
+
+## will get confused when you do a left join then a right join, forgets geometry is geometry
+## need to use st_to_sf
 
 #Check the dimensions
 dim(counties_sf_utm)
@@ -546,12 +560,13 @@ userLat = 36.0045442
 userLng = -78.9426381
 
 #Create a simple features point geometry from the point
-theSite_sfp <- st_point(c(userLng,userLat))
+theSite_sfp <- st_point(c(userLng,userLat)) ## spatial feature point
 
 #Create a simple features column from the point geometry object
-theSite_sfc <- st_sfc(theSite_sfp, crs = 4326)
+theSite_sfc <- st_sfc(theSite_sfp, crs = 4326) ## spatial feature column
 
 #Transform the mask to match the CRS of the counties dataset
+## transform to UTM, same as counties
 theSite_sfc_transformed <- st_transform(theSite_sfc, crs = st_crs(counties_sf_utm))
 
 #Create a boolean mask 
@@ -560,7 +575,7 @@ resultMask <- st_intersects(counties_sf_utm,
                             sparse = FALSE) #The `sparse` option returns a Boolean mask
 
 #Filter the counties dataset using the boolean mask
-selCounties <- counties_sf_utm[resultMask,]
+selCounties <- counties_sf_utm[resultMask,] ## returns that row and all columns
 
 #Map the results
 mapView(counties_sf[resultMask,])
